--- a/css/hitung.css
+++ b/css/hitung.css
@@ -96,3 +96,13 @@ body {
     font-size: 14px;
     color: #6b7280;
 }
+
+.hasil {
+    border: 2px solid #1e7f1e;
+    background-color: rgb(93, 149, 93);
+    border-radius: 10px;
+    padding: 20px;
+    color: white;
+    margin-bottom: 20px;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+}
